compiler/tests/fixtures/invalid/semantics/assignment_in_wrong_field.viv
// Invalid: assignment in wrong action field (conditions)

action bad-assign-field:
    roles:
        @actor:
            as: initiator
    conditions:
        @actor.ready = true
